--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "node": ">= 20.0.0"
   },
   "scripts": {
-    "start": "tsc-watch --onSuccess \"node dist/index.js\""
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "dev": "tsc-watch --onSuccess \"node dist/src/index.js\"",
+    "lint": "eslint . --ext .ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
